# microclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md  SECURITY.md  deny.toml  deploy.sh  flake.nix  microclaw.config.example.yaml
.github/: dependabot.yml
.github/workflows/: build-arm64.yml  ci.yml  extended-ci.yml  nightly-health.yml  nightly-stability.yml  release-assets.yml  skill-review.yml  (+1 more)
crates/microclaw-tools/: Cargo.toml
crates/microclaw-tools/src/: lib.rs  media_client.rs  runtime.rs  sandbox.rs  tool_cache.rs  url_safety.rs  web_fetch.rs  web_search.rs  website_policy.rs
docs/: IMPLEMENTED.md  a2a.md  builtin-skills-roster.md  completion-contracts.md  concurrent-tasks-progress-reporting.md  humanlike-chat-analysis.md
scripts/: matrix-e2ee-smoke-test.sh  matrix-smoke-test.sh  release_finalize.sh  release_homebrew.sh  trigger_release.sh
snap/: snapcraft.yaml
src/: a2a.rs  acp.rs  acp_subagent.rs  agent_engine.rs  builtin_skills.rs  channel.rs  channel_adapter.rs  chat_commands.rs  chat_turn_queue.rs  codex_auth.rs  completion_contract.rs  config.rs  config_persistence.rs  config_wizard.rs  context_references.rs  db.rs  discord.rs  doctor.rs  embedding.rs  error.rs  eval.rs  gateway.rs  hooks.rs  http_client.rs  inflight.rs  lib.rs  llm.rs  llm_types.rs  logging.rs  main.rs  mcp.rs  memory.rs  memory_backend.rs  memory_quality.rs  memory_service.rs  mood.rs  otlp.rs  outbox.rs  persona.rs  plugins.rs  (+20 more)
tests/: config_validation.rs  db_integration.rs  media_tools.rs
web/: package-lock.json  package.json
(+132 files in other folders)
