[package]
name = "microclaw-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
microclaw-core = { version = "0.1.0", path = "../microclaw-core" }
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
urlencoding = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
